// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SmileIntegrationDetail/> componentDidMount() should set the integration's name in the state 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/smile"
          >
            Smile
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          foo
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert info mb16"
        >
          <div
            class="content"
          >
            <span
              class="label"
            >
              <p>
                <b
                  class="alert-heading"
                >
                  <i
                    class="material-icons md-spin mr-2"
                  >
                    autorenew
                  </i>
                  Importing your Smile customers
                </b>
              </p>
              <span>
                We're currently importing all your Smile customers. This way, you'll see customer rewards points next to tickets. We'll notify you via email when the import is done.
              </span>
            </span>
            <div
              class="customActions"
            >
              <a
                class="actionLink"
                to="/app/customers"
              >
                Review imported customers
              </a>
            </div>
          </div>
        </div>
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value="foo"
            />
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper mr-2 fill primary medium"
            type="submit"
          >
            <span
              class="content"
            >
              Update integration
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-1"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SmileIntegrationDetail/> componentWillReceiveProps() should not do anything because the previous integration was not empty 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/smile"
          >
            Smile
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          bar
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert info mb16"
        >
          <div
            class="content"
          >
            <span
              class="label"
            >
              <p>
                <b
                  class="alert-heading"
                >
                  <i
                    class="material-icons md-spin mr-2"
                  >
                    autorenew
                  </i>
                  Importing your Smile customers
                </b>
              </p>
              <span>
                We're currently importing all your Smile customers. This way, you'll see customer rewards points next to tickets. We'll notify you via email when the import is done.
              </span>
            </span>
            <div
              class="customActions"
            >
              <a
                class="actionLink"
                to="/app/customers"
              >
                Review imported customers
              </a>
            </div>
          </div>
        </div>
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value="foo"
            />
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper mr-2 fill primary medium"
            type="submit"
          >
            <span
              class="content"
            >
              Update integration
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-3"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SmileIntegrationDetail/> componentWillReceiveProps() should not do anything because there is no integration 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/smile"
          >
            Smile
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper mr-2 fill primary medium"
            type="submit"
          >
            <span
              class="content"
            >
              Update integration
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-2"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SmileIntegrationDetail/> componentWillReceiveProps() should set the name of the integration in the state because there was no integration before and there is one now 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/smile"
          >
            Smile
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          foo
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert info mb16"
        >
          <div
            class="content"
          >
            <span
              class="label"
            >
              <p>
                <b
                  class="alert-heading"
                >
                  <i
                    class="material-icons md-spin mr-2"
                  >
                    autorenew
                  </i>
                  Importing your Smile customers
                </b>
              </p>
              <span>
                We're currently importing all your Smile customers. This way, you'll see customer rewards points next to tickets. We'll notify you via email when the import is done.
              </span>
            </span>
            <div
              class="customActions"
            >
              <a
                class="actionLink"
                to="/app/customers"
              >
                Review imported customers
              </a>
            </div>
          </div>
        </div>
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value="foo"
            />
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper mr-2 fill primary medium"
            type="submit"
          >
            <span
              class="content"
            >
              Update integration
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-4"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SmileIntegrationDetail/> componentWillReceiveProps() should set the name of the integration the state and set a timeout to fetch the integration because the action in the URL is set to \`authentication\` and the integration is not yet authenticated 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/smile"
          >
            Smile
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          foo
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert info mb16"
        >
          <div
            class="content"
          >
            <span
              class="label"
            >
              <p>
                <b
                  class="alert-heading"
                >
                  <i
                    class="material-icons md-spin mr-2"
                  >
                    autorenew
                  </i>
                  Importing your Smile customers
                </b>
              </p>
              <span>
                We're currently importing all your Smile customers. This way, you'll see customer rewards points next to tickets. We'll notify you via email when the import is done.
              </span>
            </span>
            <div
              class="customActions"
            >
              <a
                class="actionLink"
                to="/app/customers"
              >
                Review imported customers
              </a>
            </div>
          </div>
        </div>
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value="foo"
            />
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper mr-2 fill primary medium"
            type="submit"
          >
            <span
              class="content"
            >
              Update integration
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-5"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SmileIntegrationDetail/> componentWillReceiveProps() should set the name of the integration the state and trigger a success notification because the action in the URL is set to \`authentication\` and the integration is already authenticated 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/smile"
          >
            Smile
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          foo
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert info mb16"
        >
          <div
            class="content"
          >
            <span
              class="label"
            >
              <p>
                <b
                  class="alert-heading"
                >
                  <i
                    class="material-icons md-spin mr-2"
                  >
                    autorenew
                  </i>
                  Importing your Smile customers
                </b>
              </p>
              <span>
                We're currently importing all your Smile customers. This way, you'll see customer rewards points next to tickets. We'll notify you via email when the import is done.
              </span>
            </span>
            <div
              class="customActions"
            >
              <a
                class="actionLink"
                to="/app/customers"
              >
                Review imported customers
              </a>
            </div>
          </div>
        </div>
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value="foo"
            />
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper mr-2 fill primary medium"
            type="submit"
          >
            <span
              class="content"
            >
              Update integration
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-6"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SmileIntegrationDetail/> render() should not render anything about the import and render the re-activate button instead of the deactivate button because the integration is deactivated 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/smile"
          >
            Smile
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper mr-2 fill primary medium"
            type="submit"
          >
            <span
              class="content"
            >
              Update integration
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            <span
              class="content"
            >
              Reconnect
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-12"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SmileIntegrationDetail/> render() should render a loader because the integration is loading 1`] = `
<div
  class="container"
>
  <div
    class="inner"
    style="min-height: 500px;"
  >
    <i
      class="icon-custom icon-circle-o-notch md-spin"
      style="font-size: 40px;"
    />
  </div>
</div>
`;

exports[`<SmileIntegrationDetail/> render() should render a small paragraph because the import is over 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/smile"
          >
            Smile
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <p>
          All your Smile customers have been imported. You can now see their info in the sidebar.
           
          <a
            to="/app/customers"
          >
            Review your customers.
          </a>
        </p>
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper mr-2 fill primary medium"
            type="submit"
          >
            <span
              class="content"
            >
              Update integration
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-9"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SmileIntegrationDetail/> render() should render an alert because the import is in progress 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/smile"
          >
            Smile
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert info mb16"
        >
          <div
            class="content"
          >
            <span
              class="label"
            >
              <p>
                <b
                  class="alert-heading"
                >
                  <i
                    class="material-icons md-spin mr-2"
                  >
                    autorenew
                  </i>
                  Importing your Smile customers
                </b>
              </p>
              <span>
                We're currently importing all your Smile customers. This way, you'll see customer rewards points next to tickets. We'll notify you via email when the import is done.
              </span>
            </span>
            <div
              class="customActions"
            >
              <a
                class="actionLink"
                to="/app/customers"
              >
                Review imported customers
              </a>
            </div>
          </div>
        </div>
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper mr-2 fill primary medium"
            type="submit"
          >
            <span
              class="content"
            >
              Update integration
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-8"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SmileIntegrationDetail/> render() should render buttons loading and disabled because a submit is in progress 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/smile"
          >
            Smile
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert info mb16"
        >
          <div
            class="content"
          >
            <span
              class="label"
            >
              <p>
                <b
                  class="alert-heading"
                >
                  <i
                    class="material-icons md-spin mr-2"
                  >
                    autorenew
                  </i>
                  Importing your Smile customers
                </b>
              </p>
              <span>
                We're currently importing all your Smile customers. This way, you'll see customer rewards points next to tickets. We'll notify you via email when the import is done.
              </span>
            </span>
            <div
              class="customActions"
            >
              <a
                class="actionLink"
                to="/app/customers"
              >
                Review imported customers
              </a>
            </div>
          </div>
        </div>
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <button
            aria-disabled="true"
            class="wrapper mr-2 fill primary medium isDisabled"
            type="button"
          >
            <svg
              class="LoadingSpinner--spinner--a8Lrf LoadingSpinner--gloom--BV3WA spinner"
              height="22"
              preserveAspectRatio="xMidYMid meet"
              role="status"
              viewBox="0 0 20 20"
              width="22"
            >
              <circle
                class="LoadingSpinner--dot--tnzt_"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <circle
                class="LoadingSpinner--circle--OnNzl"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </svg>
            <span
              class="content"
            >
              Update integration
            </span>
          </button>
          <button
            aria-disabled="true"
            class="wrapper float-right fill destructive medium isDisabled"
            id="confirm-10"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SmileIntegrationDetail/> render() should render not render deactivate / reactivate buttons because authentication is required 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/smile"
          >
            Smile
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert info mb16"
        >
          <div
            class="content"
          >
            <span
              class="label"
            >
              <p>
                <b
                  class="alert-heading"
                >
                  <i
                    class="material-icons md-spin mr-2"
                  >
                    autorenew
                  </i>
                  Importing your Smile customers
                </b>
              </p>
              <span>
                We're currently importing all your Smile customers. This way, you'll see customer rewards points next to tickets. We'll notify you via email when the import is done.
              </span>
            </span>
            <div
              class="customActions"
            >
              <a
                class="actionLink"
                to="/app/customers"
              >
                Review imported customers
              </a>
            </div>
          </div>
        </div>
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper mr-2 fill primary medium"
            type="submit"
          >
            <span
              class="content"
            >
              Update integration
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-11"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
